packages/typ/tests/fixtures/diagnostics/0585_functor_opaque_result_annotation_mismatch_04.ml.expected
File "0585_functor_opaque_result_annotation_mismatch_04.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0585_functor_opaque_result_annotation_mismatch_04 is not a valid module name.

File "0585_functor_opaque_result_annotation_mismatch_04.ml", line 20, characters 14-25:
20 | let _ : int = Out_delta.y
                   ^^^^^^^^^^^
Error: The value Out_delta.y has type Out_delta.u = Make_delta(Input_delta).u
       but an expression was expected of type int
